# flash-attention

./: .gitignore  AUTHORS  CMakeLists.txt  FA4_naming_guide.md  README.md  build.sh  pyproject.toml  pytest.ini  setup.py  swap_AB_layout_design.md
.github/workflows/: publish.yml
benchmarks/: bench_flash_attention_fp8_output.py  benchmark_abs_s_overhead.py  benchmark_abs_share_compare.py  benchmark_attn_quant_output_fusion.py  benchmark_causal.py  benchmark_fa2_sinks.py  benchmark_tree_attention.py
cmake/: utils.cmake
csrc/common/: registration.h  torch_api_shim.h
csrc/flash_attn/: flash_api.cpp  flash_api_sparse.cpp  flash_api_torch_lib.cpp  tree_attention.cpp
csrc/flash_attn/src/: block_info.h  block_info_tree.h  flash.h  flash_bwd_hdim40_bf16_causal_sm80.cu  flash_bwd_hdim40_bf16_sm80.cu  flash_bwd_hdim40_fp16_causal_sm80.cu  flash_bwd_hdim40_fp16_sm80.cu  flash_bwd_hdim72_bf16_causal_sm80.cu  flash_bwd_hdim72_bf16_sm80.cu  flash_bwd_hdim72_fp16_causal_sm80.cu  flash_bwd_hdim72_fp16_sm80.cu  (+102 more)
csrc/flash_attn_ck/: .gitignore  flash_api.cpp  flash_api_torch_lib.cpp  flash_common.hpp  mha_fwd.cpp  mha_fwd_kvcache.cpp  mha_varlen_fwd.cpp
csrc/ft_attention/: ft_attention.cpp  setup.py
csrc/fused_dense_lib/: fused_dense.cpp
csrc/layer_norm/: ln_api.cpp  setup.py
csrc/rotary/: setup.py
csrc/xentropy/: setup.py
flash_attn/: __init__.py  flash_attn_interface.py
flash_attn/cute/: __init__.py  blackwell_helpers.py  block_sparse_utils.py  cute_dsl_utils.py  dense_mask.py  flash_fwd.py  flash_fwd_combine.py  flash_fwd_decode_sm120.py  flash_fwd_mla_sm100.py  flash_fwd_sm100.py  flash_fwd_sm90.py  interface.py  mask.py  mma_sm100_desc.py  named_barrier.py  paged_kv.py  sm100_hd256_2cta_fmha_forward.py  sm120_paged_decode.py  sm120_paged_decode_cache.py  softmax.py  tile_scheduler.py  topk_gather_kv.py  topk_mask.py  utils.py
flash_attn/layers/: rotary.py
flash_attn/utils/: cpu_block_attn.py
hopper/: block.h  epilogue_fwd.hpp  flash.h  flash_api.cpp  flash_api.h  flash_api_stable.cpp  flash_api_stable_registration.cpp  flash_api_torch_lib.cpp  flash_attn_interface.py  flash_bwd_launch_template.h  flash_fwd_combine_kernel.h  flash_fwd_combine_launch_template.h  flash_fwd_kernel_sm80.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_prepare_scheduler.cu  fp8_promotion_helper.hpp  generate_kernels.py  heuristics.h  mainloop_fwd_sm80.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  mask.h  seqlen.h  setup.py  softmax.h  static_switch.h  streamk.cu  streamk.h  test_flash_attn.py  test_util.py  tile_scheduler.hpp  tile_size.h  utils.h
hopper/instantiations/: flash_bwd_hdim40_bf16_sm80.cu  flash_bwd_hdim40_bf16_sm90.cu  flash_bwd_hdim40_bf16_softcap_sm80.cu  flash_bwd_hdim40_bf16_softcap_sm90.cu  flash_bwd_hdim40_bf16_softcapall_sm90.cu  flash_bwd_hdim40_fp16_sm80.cu  flash_bwd_hdim40_fp16_sm90.cu  flash_bwd_hdim40_fp16_softcap_sm80.cu  flash_bwd_hdim40_fp16_softcap_sm90.cu  flash_bwd_hdim40_fp16_softcapall_sm90.cu  flash_bwd_hdim72_bf16_sm80.cu  flash_bwd_hdim72_bf16_sm90.cu  flash_bwd_hdim72_bf16_softcap_sm80.cu  flash_bwd_hdim72_bf16_softcap_sm90.cu  flash_bwd_hdim72_bf16_softcapall_sm90.cu  flash_bwd_hdim72_fp16_sm80.cu  flash_bwd_hdim72_fp16_sm90.cu  flash_bwd_hdim72_fp16_softcap_sm80.cu  flash_bwd_hdim72_fp16_softcap_sm90.cu  flash_bwd_hdim72_fp16_softcapall_sm90.cu  flash_bwd_hdim80_bf16_sm80.cu  flash_bwd_hdim80_bf16_sm90.cu  flash_bwd_hdim80_bf16_softcap_sm80.cu  flash_bwd_hdim80_bf16_softcap_sm90.cu  flash_bwd_hdim80_bf16_softcapall_sm90.cu  flash_bwd_hdim80_fp16_sm80.cu  flash_bwd_hdim80_fp16_sm90.cu  flash_bwd_hdim80_fp16_softcap_sm80.cu  flash_bwd_hdim80_fp16_softcap_sm90.cu  flash_bwd_hdim80_fp16_softcapall_sm90.cu  flash_fwd_hdim128_bf16_packgqa_sm90.cu  flash_fwd_hdim128_bf16_paged_sm80.cu  flash_fwd_hdim128_bf16_paged_sm90.cu  flash_fwd_hdim128_bf16_paged_softcap_sm80.cu  flash_fwd_hdim128_bf16_paged_softcap_sm90.cu  flash_fwd_hdim128_bf16_paged_split_sm80.cu  flash_fwd_hdim128_bf16_paged_split_sm90.cu  flash_fwd_hdim128_bf16_paged_split_softcap_sm80.cu  flash_fwd_hdim128_bf16_paged_split_softcap_sm90.cu  flash_fwd_hdim128_bf16_sm80.cu  (+552 more)
scripts/: run_filtered_kvcache_tests.py  smoke_paged_kvcache.py
tests/: flash_attn_wrapper.py  minf.py  test_abs_s_fa2.py  test_cpu_block_attn.py  test_fa2_sinks.py  test_fa3_batch_invariance.py  test_flash_attn.py  test_flash_attn_ck.py  test_flash_attn_package_init.py  test_flash_attn_triton_amd.py  test_rotary.py  test_vllm_flash_attn.py
tests/cute/: test_dense_mask.py  test_flash_attn.py  test_flash_attn_dynamic_causal.py  test_flash_attn_fp8_kv_cache.py  test_flash_attn_fp8_output.py  test_flash_attn_fp8_pergroup_output.py  test_hopper_policies.py  test_sm120_paged_decode_d256.py  test_topk_mask.py
tests/layers/: test_rotary.py
tests/losses/: test_cross_entropy.py  test_cross_entropy_parallel.py
tests/models/: test_baichuan.py  test_bert.py  test_bigcode.py  test_btlm.py  test_falcon.py  test_gpt.py  test_gpt_generation_parallel.py  test_gpt_neox.py  test_gpt_parallel.py  test_gptj.py  test_llama.py  test_opt.py  test_vit.py
tests/modules/: test_block_parallel.py  test_embedding_parallel.py  test_mha_parallel.py  test_mlp_parallel.py
tests/ops/: test_dropout_layer_norm.py  test_fused_dense.py  test_fused_dense_parallel.py
vllm_flash_attn/: __init__.py  flash_attn_interface.py
vllm_flash_attn/layers/: rotary.py
vllm_flash_attn/utils/: tree.py
(+4 files in other folders)
